[package]
edition = "2021"
name    = "gps_tracker"
version = "0.1.0"

[[bin]]
name = "gps_tracker"
test = false
bench = false

[lib]
name = "gps_tracker"
test = false
bench = false

[dependencies]
embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
embassy-sync = "0.6.2"
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
embedded-io = { version = "0.6.1", features = ["alloc"] }
esp-alloc = "0.7.0"
esp-backtrace = { version = "0.15.1", features = [
  "esp32",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-hal = { version = "1.0.0-beta.0", features = ["esp32", "unstable"] }
esp-hal-embassy = { version = "0.7.0", features = ["esp32"] }
esp-println = { version = "0.13.0", features = ["esp32", "log"] }
log = { version = "0.4.21" }
mcp9808 = "0.4.0"
nmea = { version = "0.7", default-features = false, features = ["all-sentences"]}
serde = { version = "1.0.219", default-features = false, features = ["derive"]}
serde_json = {  version = "1.0.140", default-features = false, features = ["alloc"]}
static_cell = "2.1.0"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
